--- a/Savio/SavingPlanSetupCells/CancelButtonTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/CancelButtonTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -19,9 +19,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kA2-yU-na3">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kA2-yU-na3">
                         <rect key="frame" x="0.0" y="18" width="320" height="43"/>
                         <color key="backgroundColor" red="0.78431372549019607" green="0.23921568627450979" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="43" id="mne-HY-o69"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="5"/>
@@ -42,8 +45,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="DTW-GC-rAk" secondAttribute="bottom" id="1Gx-bX-1xn"/>
+                    <constraint firstItem="kA2-yU-na3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="3pr-Kv-eQg"/>
                     <constraint firstAttribute="trailing" secondItem="DTW-GC-rAk" secondAttribute="trailing" id="U2N-hh-Naj"/>
+                    <constraint firstItem="kA2-yU-na3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="aXp-3b-7Iy"/>
                     <constraint firstItem="DTW-GC-rAk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="asF-NE-WSY"/>
+                    <constraint firstAttribute="trailing" secondItem="kA2-yU-na3" secondAttribute="trailing" id="dgD-wW-KJ9"/>
                     <constraint firstItem="DTW-GC-rAk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="mlr-ip-ax4"/>
                 </constraints>
                 <variation key="default">
