--- a/Savio/StatView/SAStatViewController.xib
+++ b/Savio/StatView/SAStatViewController.xib
@@ -237,12 +237,13 @@
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jmE-Ve-npa" userLabel="ContentView">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="268"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="0.99215686270000003" green="0.95294117649999999" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="600" id="dvW-Ub-t8M"/>
                                     </constraints>
                                 </view>
                             </subviews>
+                            <color key="backgroundColor" red="0.99215686270000003" green="0.95294117649999999" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="jmE-Ve-npa" secondAttribute="trailing" id="GI0-g2-pCy"/>
                                 <constraint firstAttribute="bottom" secondItem="jmE-Ve-npa" secondAttribute="bottom" id="Kn6-WQ-ZTo"/>
