--- a/Savio/SavingPlanSetupCells/SavingPlanCostTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanCostTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Medium.otf">
@@ -22,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="103.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Which costs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owe-f5-37h">
@@ -34,7 +33,7 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="3000" translatesAutoresizingMaskIntoConstraints="NO" id="ISQ-4m-YEC" customClass="slider" customModule="Savio" customModuleProvider="target">
+                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="400" minValue="0.0" maxValue="3000" translatesAutoresizingMaskIntoConstraints="NO" id="ISQ-4m-YEC" customClass="slider" customModule="Savio" customModuleProvider="target">
                         <rect key="frame" x="36" y="73" width="248" height="31"/>
                         <color key="minimumTrackTintColor" red="0.21176470588235294" green="0.2196078431372549" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="maximumTrackTintColor" red="0.21176470588235294" green="0.2196078431372549" blue="0.26666666666666666" alpha="1" colorSpace="deviceRGB"/>
@@ -73,12 +72,8 @@
                             <action selector="plusButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="T44-9P-AOY"/>
                         </connections>
                     </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7r7-Jx-bGU">
-                        <rect key="frame" x="61" y="38" width="221" height="28"/>
-                        <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smW-fd-VOu">
-                        <rect key="frame" x="43" y="38" width="113" height="26"/>
+                        <rect key="frame" x="34" y="39" width="113" height="26"/>
                         <color key="backgroundColor" red="0.25490196078431371" green="0.25490196078431371" blue="0.25490196078431371" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="130" id="Be9-sN-mh9"/>
@@ -99,7 +94,7 @@
                         </variation>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="  0" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ukx-QD-x5v">
-                        <rect key="frame" x="155" y="38" width="140" height="26"/>
+                        <rect key="frame" x="146" y="39" width="140" height="26"/>
                         <color key="backgroundColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="78s-de-v0U"/>
@@ -123,7 +118,8 @@
                 <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="DQR-uk-sx8" firstAttribute="top" secondItem="ISQ-4m-YEC" secondAttribute="top" constant="9" id="07h-ob-R3p"/>
-                    <constraint firstAttribute="trailing" secondItem="ukx-QD-x5v" secondAttribute="trailing" constant="25" id="7mf-TW-UF3"/>
+                    <constraint firstItem="smW-fd-VOu" firstAttribute="baseline" secondItem="ukx-QD-x5v" secondAttribute="baseline" id="3PE-9k-f2C"/>
+                    <constraint firstAttribute="trailing" secondItem="ukx-QD-x5v" secondAttribute="trailing" constant="34" id="7mf-TW-UF3"/>
                     <constraint firstItem="ukx-QD-x5v" firstAttribute="width" secondItem="smW-fd-VOu" secondAttribute="width" constant="27" id="BAs-Uw-02X"/>
                     <constraint firstItem="DQR-uk-sx8" firstAttribute="bottom" secondItem="ISQ-4m-YEC" secondAttribute="bottom" constant="-9" id="D8h-LA-5SQ"/>
                     <constraint firstItem="DQR-uk-sx8" firstAttribute="top" secondItem="QW5-xP-CdE" secondAttribute="top" id="Dxe-kg-P81"/>
@@ -133,17 +129,13 @@
                     <constraint firstItem="ISQ-4m-YEC" firstAttribute="leading" secondItem="DQR-uk-sx8" secondAttribute="trailing" constant="8" id="L6j-iS-dy6"/>
                     <constraint firstAttribute="bottom" secondItem="ISQ-4m-YEC" secondAttribute="bottom" constant="4.5" id="NMo-NW-l8h"/>
                     <constraint firstItem="smW-fd-VOu" firstAttribute="top" secondItem="ukx-QD-x5v" secondAttribute="top" id="Q9J-5t-3ZX"/>
-                    <constraint firstItem="7r7-Jx-bGU" firstAttribute="top" secondItem="ukx-QD-x5v" secondAttribute="top" id="Rea-Y4-Fuk"/>
-                    <constraint firstItem="smW-fd-VOu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="43" id="XTI-os-fsj"/>
+                    <constraint firstItem="smW-fd-VOu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="34" id="XTI-os-fsj"/>
                     <constraint firstItem="DQR-uk-sx8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="esR-jk-i6L"/>
-                    <constraint firstItem="7r7-Jx-bGU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="53" id="gec-FE-Sou"/>
                     <constraint firstItem="ukx-QD-x5v" firstAttribute="leading" secondItem="smW-fd-VOu" secondAttribute="trailing" constant="-1" id="hyU-TU-CH1"/>
                     <constraint firstItem="DQR-uk-sx8" firstAttribute="bottom" secondItem="QW5-xP-CdE" secondAttribute="bottom" id="hz8-fp-aIZ"/>
-                    <constraint firstItem="ISQ-4m-YEC" firstAttribute="top" secondItem="7r7-Jx-bGU" secondAttribute="bottom" constant="7" id="pcq-dG-WWq"/>
                     <constraint firstAttribute="trailing" secondItem="QW5-xP-CdE" secondAttribute="trailing" constant="18" id="t1p-i4-YP7"/>
                     <constraint firstItem="QW5-xP-CdE" firstAttribute="leading" secondItem="ISQ-4m-YEC" secondAttribute="trailing" constant="8" id="to6-FI-Ms4"/>
-                    <constraint firstItem="7r7-Jx-bGU" firstAttribute="trailing" secondItem="ISQ-4m-YEC" secondAttribute="trailing" id="uNc-Rv-iVj"/>
-                    <constraint firstItem="ukx-QD-x5v" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="7" id="vIj-U3-q3y"/>
+                    <constraint firstItem="ukx-QD-x5v" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="8" id="vIj-U3-q3y"/>
                     <constraint firstItem="owe-f5-37h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vbe-nO-OQX"/>
                     <constraint firstItem="owe-f5-37h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="viL-BQ-Ofz"/>
                     <constraint firstItem="ISQ-4m-YEC" firstAttribute="top" secondItem="smW-fd-VOu" secondAttribute="bottom" constant="11" id="wnC-96-ScD"/>
