--- a/Savio/SAOfferList/SAOfferListTableViewCell.xib
+++ b/Savio/SAOfferList/SAOfferListTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -67,7 +67,6 @@
                                         <rect key="frame" x="6" y="85" width="186" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="3he-9Z-MZD"/>
-                                            <constraint firstAttribute="width" constant="186" id="PP2-VP-b1G"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -146,7 +145,6 @@
                         <rect key="frame" x="38" y="303" width="244" height="13"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="13" id="2gb-U7-DS1"/>
-                            <constraint firstAttribute="width" constant="244" id="xfx-ja-fcm"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -180,7 +178,7 @@
                 <outlet property="offerImage" destination="682-Zc-T1z" id="pHl-gu-4Ob"/>
                 <outlet property="suggestedHt" destination="ZSs-r1-AmF" id="XSR-0X-du9"/>
             </connections>
-            <point key="canvasLocation" x="338" y="218.5"/>
+            <point key="canvasLocation" x="756" y="232.5"/>
         </tableViewCell>
     </objects>
     <resources>
